# Easy-Util

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Check.hpp  MemOp.cu  MemOp.hpp
